--- a/app/design/frontend/base/default/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/login.phtml
@@ -10,44 +10,71 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+<?php
+/**
+ * Customer onepage checkout login form template
+ *
+ * @var $this Mage_Checkout_Block_Onepage_Login
+ */
+?>
+<?php
+$isRegistrationAllowed = $this->helper('customer')->isRegistrationAllowed();
+$isAllowedGuestCheckout = $this->helper('checkout')->isAllowedGuestCheckout($this->getQuote());
+$isCustomerMustBeLogged = $this->helper('checkout')->isCustomerMustBeLogged();
+$isPersistentEnabled = $this->helper('checkout')->isPersistentEnabled();
+?>
 <?php /* Extensions placeholder */ ?>
+<?= $this->getChildHtml('login_before') ?>
 <?= $this->getChildHtml('checkout.onepage.login.extra') ?>
-<div class="col2-set">
-    <?= $this->getChildHtml('login_before') ?>
+<div class="col2-set<?= !($isRegistrationAllowed || $isAllowedGuestCheckout) ? ' login-only' : '' ?>">
+    <?php if ($isRegistrationAllowed || $isAllowedGuestCheckout): ?>
     <div class="col-1">
-        <h3><?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?><?= $this->__('Checkout as a Guest or Register') ?><?php else: ?><?= $this->__('Register to Create an Account') ?><?php endif ?></h3>
-        <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
-            <p><?= $this->__('Register with us for future convenience:') ?></p>
+        <?php if ($isRegistrationAllowed): ?>
+            <?php if ($isAllowedGuestCheckout): ?>
+                <h3><?= $this->__('Checkout as a Guest or Register') ?></h3>
+            <?php else: ?>
+                <h3><?= $this->__('Register to Create an Account') ?></h3>
+            <?php endif ?>
+            <p><?= $this->__('By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.') ?></p>
         <?php else: ?>
-            <p><strong><?= $this->__('Register and save time!') ?></strong><br />
-            <?= $this->__('Register with us for future convenience:') ?></p>
-            <ul>
-                <li><?= $this->__('Fast and easy check out') ?></li>
-                <li><?= $this->__('Easy access to your order history and status') ?></li>
-            </ul>
+            <h3><?= $this->__('Checkout as a Guest') ?></h3>
         <?php endif ?>
-        <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
+
+        <?php if ($isRegistrationAllowed && $isAllowedGuestCheckout): ?>
             <ul class="form-list">
-                <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
                 <li class="control">
-                    <input type="radio" name="checkout_method" id="login:guest" value="guest"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_GUEST): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:guest"><?= $this->__('Checkout as Guest') ?></label>
+                    <input type="radio" name="checkout_method" id="login:guest" value="guest"<?php if($this->getQuote()->getCheckoutMethod() == Mage_Checkout_Model_Type_Onepage::METHOD_GUEST): ?> checked="checked"<?php endif ?> class="radio" />
+                    <label for="login:guest"><?= $this->__('Checkout as Guest') ?></label>
                 </li>
-                <?php endif ?>
                 <li class="control">
-                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER || !$this->getQuote()->isAllowedGuestCheckout()): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:register"><?= $this->__('Register') ?></label>
+                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod() == Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER): ?> checked="checked"<?php endif ?> class="radio" />
+                    <label for="login:register"><?= $this->__('Register and Checkout') ?></label>
                 </li>
             </ul>
-            <h4><?= $this->__('Register and save time!') ?></h4>
-            <p><?= $this->__('Register with us for future convenience:') ?></p>
-            <ul class="ul">
-                <li><?= $this->__('Fast and easy check out') ?></li>
-                <li><?= $this->__('Easy access to your order history and status') ?></li>
-            </ul>
-        <?php else: ?>
+        <?php elseif ($isRegistrationAllowed): ?>
             <input type="hidden" name="checkout_method" id="login:register" value="register" checked="checked" />
+        <?php else: ?>
+            <input type="hidden" name="checkout_method" id="login:guest" value="guest" checked="checked" />
         <?php endif ?>
+
+        <div class="buttons-set">
+            <p class="required">&nbsp;</p>
+            <?php if ($isAllowedGuestCheckout): ?>
+                <button id="onepage-guest-register-button" type="button" class="button" onclick="checkout.setMethod();"><?= $this->__('Continue') ?></button>
+            <?php elseif ($isCustomerMustBeLogged): ?>
+                <button id="onepage-guest-register-button" type="button" class="button" onclick="window.location='<?= $this->helper('checkout/url')->getRegistrationUrl();?>'"><?= $this->__('Register') ?></button>
+            <?php elseif ($isPersistentEnabled): ?>
+                <form action="<?= $this->getUrl('persistent/index/saveMethod') ?>">
+                    <button id="onepage-guest-register-button" type="submit" class="button"><?= $this->__('Register') ?></button>
+                </form>
+            <?php else: ?>
+                <button id="onepage-guest-register-button" type="button" class="button" onclick="checkout.setMethod();"><?= $this->__('Register') ?></button>
+            <?php endif ?>
+        </div>
     </div>
-    <div class="col-2">
+    <?php endif ?>
+    <?php // This column should be col-1 if the registration column is not displayed ?>
+    <div class="<?= ($isRegistrationAllowed || $isAllowedGuestCheckout) ? 'col-2' : 'col-1' ?> registered-users">
         <h3><?= $this->__('Login') ?></h3>
         <?= $this->getMessagesBlock()->toHtml() ?>
         <form id="login-form" action="<?= $this->getPostAction() ?>" method="post">
@@ -59,7 +86,7 @@
                 <li>
                     <label for="login-email" class="required"><em>*</em><?= $this->__('Email Address') ?></label>
                     <div class="input-box">
-                        <input type="text" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" />
+                        <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" />
                     </div>
                 </li>
                 <li>
@@ -68,43 +95,44 @@
                         <input type="password" class="input-text required-entry" id="login-password" name="login[password]" autocomplete="off" />
                     </div>
                 </li>
+                <li>
+                    <a href="<?= $this->getUrl('customer/account/forgotpassword') ?>" class="f-left"><?= $this->__('Forgot your password?') ?></a>
+                </li>
                 <?= $this->getChildHtml('form.additional.info') ?>
+                <?= $this->getChildHtml('persistent.remember.me') ?>
             </ul>
+            <input name="context" type="hidden" value="checkout" />
         </fieldset>
         </form>
-    </div>
-</div>
-<div class="col2-set">
-    <div class="col-1">
         <div class="buttons-set">
-            <p class="required">&nbsp;</p>
-            <button type="button" class="button" onclick="checkout.setMethod();"><?= ($this->getQuote()->isAllowedGuestCheckout() ? $this->__('Continue') : $this->__('Register')) ?></button>
-        </div>
-    </div>
-    <div class="col-2">
-        <div class="buttons-set">
-            <p class="required"><?= $this->__('* Required Fields') ?></p>
-            <a href="<?= $this->getUrl('customer/account/forgotpassword') ?>" class="f-left"><?= $this->__('Forgot your password?') ?></a>
             <button type="submit" class="button" onclick="onepageLogin(this)"><?= $this->__('Login') ?></button>
         </div>
     </div>
 </div>
+<?php $registerParam = $this->getRequest()->getParam('register') ?>
 <script type="text/javascript">
-//<![CDATA[
-    var loginForm = new VarienForm('login-form', true);
-    $('login-email').observe('keypress', bindLoginPost);
-    $('login-password').observe('keypress', bindLoginPost);
-    function bindLoginPost(evt){
+    const loginForm = new VarienForm('login-form', true);
+    document.getElementById('login-email').addEventListener('keypress', bindLoginPost);
+    document.getElementById('login-password').addEventListener('keypress', bindLoginPost);
+    function bindLoginPost(evt) {
         if (evt.keyCode == Event.KEY_RETURN) {
             loginForm.submit();
         }
     }
-    function onepageLogin(button)
-    {
+    function onepageLogin(button) {
         if(loginForm.validator && loginForm.validator.validate()){
             button.disabled = true;
             loginForm.submit();
         }
     }
-//]]>
+
+    <?php if ($registerParam || $registerParam === ''): ?>
+        document.addEventListener("DOMContentLoaded", function() {
+            const registerCheckbox = document.getElementById('login:register');
+            if (registerCheckbox) {
+                registerCheckbox.checked = true;
+                checkout.setMethod();
+            }
+        });
+    <?php endif ?>
 </script>
