--- a/app/design/frontend/base/default/template/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/customer/form/register.phtml
@@ -25,11 +25,12 @@
     <?= $this->getMessagesBlock()->toHtml() ?>
     <?php /* Extensions placeholder */ ?>
     <?= $this->getChildHtml('customer.form.register.extra') ?>
-    <form action="<?= $this->getPostActionUrl() ?>" method="post" id="form-validate">
+    <form action="<?= $this->getPostActionUrl() ?>" method="post" id="form-validate" enctype="multipart/form-data">
         <div class="fieldset">
             <input type="hidden" name="success_url" value="<?= $this->getSuccessUrl() ?>" />
             <input type="hidden" name="error_url" value="<?= $this->getErrorUrl() ?>" />
             <input type="hidden" name="form_key" value="<?= Mage::getSingleton('core/session')->getFormKey() ?>" />
+            <p class="required"><?= $this->__('* Required Fields') ?></p>
             <h2 class="legend"><?= $this->__('Personal Information') ?></h2>
             <ul class="form-list">
                 <li class="fields">
@@ -38,13 +39,13 @@
                 <li>
                     <label for="email_address" class="required"><em>*</em><?= $this->__('Email Address') ?></label>
                     <div class="input-box">
-                        <input type="text" name="email" id="email_address" value="<?= $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" />
+                        <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="email_address" value="<?= $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" class="input-text validate-email required-entry" />
                     </div>
                 </li>
                 <?php if ($this->isNewsletterEnabled()): ?>
                 <li class="control">
                     <div class="input-box">
-                        <input type="checkbox" name="is_subscribed" title="<?= Mage::helper('core')->quoteEscape($this->__('Sign Up for Newsletter')) ?>" value="1" id="is_subscribed"<?php if($this->getFormData()->getIsSubscribed()): ?> checked="checked"<?php endif ?> class="checkbox" />
+                        <input type="checkbox" name="is_subscribed" title="<?= $this->quoteEscape($this->__('Sign Up for Newsletter')) ?>" value="1" id="is_subscribed"<?php if($this->getFormData()->getIsSubscribed()): ?> checked="checked"<?php endif ?> class="checkbox" />
                     </div>
                     <label for="is_subscribed"><?= $this->__('Sign Up for Newsletter') ?></label>
                     <?php /* Extensions placeholder */ ?>
@@ -74,13 +75,13 @@
                     <div class="field">
                         <label for="company"><?= $this->__('Company') ?></label>
                         <div class="input-box">
-                            <input type="text" name="company" id="company" value="<?= $this->escapeHtml($this->getFormData()->getCompany()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Company')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
+                            <input type="text" name="company" id="company" value="<?= $this->escapeHtml($this->getFormData()->getCompany()) ?>" title="<?= $this->quoteEscape($this->__('Company')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
                         </div>
                     </div>
                     <div class="field">
                         <label for="telephone" class="required"><em>*</em><?= $this->__('Telephone') ?></label>
                         <div class="input-box">
-                            <input type="text" name="telephone" id="telephone" value="<?= $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Telephone')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" />
+                            <input type="tel" name="telephone" id="telephone" value="<?= $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?= $this->quoteEscape($this->__('Telephone')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" />
                         </div>
                     </div>
                 </li>
@@ -88,14 +89,15 @@
                 <li class="wide">
                     <label for="street_1" class="required"><em>*</em><?= $this->__('Street Address') ?></label>
                     <div class="input-box">
-                        <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getFormData()->getStreet(0)) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Street Address')) ?>" id="street_1" class="input-text <?= $_streetValidationClass ?>" />
+                        <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getFormData()->getStreet(0)) ?>" title="<?= $this->quoteEscape($this->__('Street Address')) ?>" id="street_1" class="input-text <?= $_streetValidationClass ?>" />
                     </div>
                 </li>
             <?php $_streetValidationClass = trim(str_replace('required-entry', '', $_streetValidationClass)); ?>
             <?php for ($_i = 2, $_n = $this->helper('customer/address')->getStreetLines(); $_i <= $_n; $_i++): ?>
                 <li class="wide">
+                    <label for="street_<?= $_i ?>"><?= $this->__('Street Address %s', $_i) ?></label>
                     <div class="input-box">
-                        <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getFormData()->getStreet($_i-1)) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Street Address %s', $_i)) ?>" id="street_<?= $_i ?>" class="input-text <?= $_streetValidationClass ?>" />
+                        <input type="text" name="street[]" value="<?= $this->escapeHtml($this->getFormData()->getStreet($_i-1)) ?>" title="<?= $this->quoteEscape($this->__('Street Address %s', $_i)) ?>" id="street_<?= $_i ?>" class="input-text <?= $_streetValidationClass ?>" />
                     </div>
                 </li>
             <?php endfor ?>
@@ -103,13 +105,13 @@
                     <div class="field">
                         <label for="city" class="required"><em>*</em><?= $this->__('City') ?></label>
                         <div class="input-box">
-                            <input type="text" name="city" value="<?= $this->escapeHtml($this->getFormData()->getCity()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('City')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('city') ?>" id="city" />
+                            <input type="text" name="city" value="<?= $this->escapeHtml($this->getFormData()->getCity()) ?>" title="<?= $this->quoteEscape($this->__('City')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('city') ?>" id="city" />
                         </div>
                     </div>
                     <div class="field">
                         <label for="region_id" class="required"><em>*</em><?= $this->__('State/Province') ?></label>
                         <div class="input-box">
-                            <select id="region_id" name="region_id" title="<?= Mage::helper('core')->quoteEscape($this->__('State/Province')) ?>" class="validate-select" style="display:none;">
+                            <select id="region_id" name="region_id" title="<?= $this->quoteEscape($this->__('State/Province')) ?>" class="validate-select" style="display:none;">
                                 <option value=""><?= $this->__('Please select region, state or province') ?></option>
                             </select>
                             <script type="text/javascript">
@@ -117,7 +119,7 @@
                                 $('region_id').setAttribute('defaultValue', "<?= $this->getFormData()->getRegionId() ?>");
                             //]]>
                             </script>
-                            <input type="text" id="region" name="region" value="<?= $this->escapeHtml($this->getRegion()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('State/Province')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('region') ?>" style="display:none;" />
+                            <input type="text" id="region" name="region" value="<?= $this->escapeHtml($this->getRegion()) ?>" title="<?= $this->quoteEscape($this->__('State/Province')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('region') ?>" style="display:none;" />
                         </div>
                     </div>
                 </li>
@@ -125,7 +127,7 @@
                     <div class="field">
                         <label for="zip" class="required"><em>*</em><?= $this->__('Zip/Postal Code') ?></label>
                         <div class="input-box">
-                            <input type="text" name="postcode" value="<?= $this->escapeHtml($this->getFormData()->getPostcode()) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Zip/Postal Code')) ?>" id="zip" class="input-text validate-zip-international <?= $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
+                            <input type="text" name="postcode" value="<?= $this->escapeHtml($this->getFormData()->getPostcode()) ?>" title="<?= $this->quoteEscape($this->__('Zip/Postal Code')) ?>" id="zip" class="input-text validate-zip-international <?= $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
                         </div>
                     </div>
                     <div class="field">
@@ -151,9 +153,9 @@
                             <input type="password"
                                    name="password"
                                    id="password"
-                                   title="<?= Mage::helper('core')->quoteEscape($this->__('Password')) ?>"
+                                   title="<?= $this->quoteEscape($this->__('Password')) ?>"
                                    class="input-text required-entry validate-password min-pass-length-<?= $minPasswordLength ?>"
-                                   autocomplete="off" />
+                                   autocomplete="new-password" />
                             <p class="form-instructions">
                                 <?= $this->__('The minimum password length is %s', $minPasswordLength) ?>
                             </p>
@@ -162,18 +164,21 @@
                     <div class="field">
                         <label for="confirmation" class="required"><em>*</em><?= $this->__('Confirm Password') ?></label>
                         <div class="input-box">
-                            <input type="password" name="confirmation" title="<?= Mage::helper('core')->quoteEscape($this->__('Confirm Password')) ?>" id="confirmation" class="input-text required-entry validate-cpassword" autocomplete="off" />
+                            <input type="password" name="confirmation" title="<?= $this->quoteEscape($this->__('Confirm Password')) ?>" id="confirmation" class="input-text required-entry validate-cpassword" autocomplete="new-password" />
                         </div>
                     </div>
                 </li>
                 <?= $this->getChildHtml('form.additional.info') ?>
+                <?= $this->getChildHtml('persistent.remember.me') ?>
             </ul>
         </div>
         <div class="buttons-set">
-            <p class="required"><?= $this->__('* Required Fields') ?></p>
             <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>" class="back-link"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-            <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
+            <button type="submit" title="<?= $this->quoteEscape($this->__('Register')) ?>" class="button"><?= $this->__('Register') ?></button>
         </div>
+        <?php if (Mage::helper('checkout')->isContextCheckout()): ?>
+            <input name="context" type="hidden" value="checkout" />
+        <?php endif ?>
     </form>
     <script type="text/javascript">
     //<![CDATA[
