--- a/app/design/frontend/base/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/form/edit.phtml
@@ -77,13 +77,13 @@
     </div>
     <div class="buttons-set">
         <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save')) ?>" class="button"><span><span><?= $this->__('Save') ?></span></span></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save')) ?>" class="button"><?= $this->__('Save') ?></button>
     </div>
 </form>
 <script type="text/javascript">
     var dataForm = new VarienForm('form-validate', true);
     function setPasswordForm(arg) {
-        const fieldset = document.querySelector('#password').closest('.fieldset');
+        const fieldset = document.querySelector('#password').closest('li');
         fieldset.style.display = arg ? '' : 'none';
     }
 
